--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     
     <!-- Navbar Section -->
-    <div class="container">
+<!--     <div class="container"> -->
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">Book My Venue</a>
@@ -188,11 +188,11 @@
         </p>
     </footer>
 
-</div>
+<!-- </div>
 <style>.container{
     position: relative;
    }
-  </style>
+  </style> -->
 </body>
 
 </html>
