--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <body>
     
     <!-- Navbar section -->
-    <div class="container">
+<!--     <div class="container"> -->
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">Book My Venue</a>
@@ -105,11 +105,11 @@
     </footer>
 
 
-    <style>.container{
+<!--     <style>.container{
     position: relative;
    }
   </style>
-</div>
+</div> -->
 
 </body>
 </html>
