--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
 <body>
     
     <!-- Navbar section -->
-    <div class="container">
+<!--     <div class="container"> -->
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">Book My Venue</a>
@@ -127,11 +127,11 @@
         </p>
 
     </footer>
-</div>
+<!-- </div>
 <style>.container{
     position: relative;
    }
-  </style>
+  </style> -->
 
 </body>
 
