--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <body>
     
     <!-- Navbar Section -->
-    <div class="container">
+<!--     <div class="container"> -->
     <section id="navbar-section">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">Book My Venue</a>
@@ -211,7 +211,7 @@
         </p>
     </footer>
                
-                   </div>
+<!--                    </div> -->
 
 </body>
 </html>
