--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
   
     <body>
         <!-- Navbar Section -->
-        <div class="container">
+<!--         <div class="container"> -->
         <section id="navbar-section">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">Book My Venue</a>
@@ -135,10 +135,10 @@
         </p>
     </footer>
 
-</div>
+<!-- </div>
 <style>.container{
     position: relative;
 }
-</style>
+</style> -->
 </body>
 </html>
