--- a/events.html
+++ b/events.html
@@ -34,7 +34,7 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">Book My Venue</a>
                 <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="fas fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
@@ -61,22 +61,22 @@
     </section>
     
     <!-- Events Section -->
-    <section id="event-section">
+      <section id="event-section">
         <h1>Events, We Organized</h1>
         <div class="row event-row event-1">
-            <div class="col-lg-6">
-                <img class="event-photo" src="event-pic/event-1.jpeg" alt="">
-            </div>
             <div class="col-lg-6">
                 <div class="">
                     <h3>Marriage Functions</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum cursus arcu, ut vulputate arcu imperdiet sed. Aenean malesuada, urna id maximus lacinia, sapien lorem dictum metus, sed volutpat mauris neque vel velit.</p>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <img class="event-photo" src="event-pic/event-1.jpeg" alt="">
+            </div>
         </div>
         <hr>
 
-        <div class="row event-row event-1">
+        <div class="row event-row event-2">
             <div class="col-lg-6">
                 <div class="">
                     <h3>Anniversary Party</h3>
@@ -91,13 +91,13 @@
 
         <div class="row event-row event-1">
             <div class="col-lg-6">
-                <img class="event-photo" src="event-pic/birthday.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
                 <div class="">
                     <h3>Birthday Parties</h3>
                     <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus vulputate nulla at massa vehicula, et fermentum nisi iaculis. Pellentesque justo nulla, imperdiet id urna ac, vehicula tincidunt arcu.</p>
                 </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="event-photo" src="event-pic/birthday.jpg" alt="">
             </div>
         </div>
         <hr>
